check_out.txt
    Checking sempal v9.0.0 (X:\sempal)
error[E0583]: file not found for module `model_setup`
  --> src\lib.rs:21:1
   |
21 | pub mod model_setup;
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `model_setup`, create file "src\model_setup.rs" or "src\model_setup\mod.rs"
   = note: if there is a `mod model_setup` elsewhere in the crate already, import it with `use crate::...` instead

error[E0432]: unresolved import `config_types::PannsBackendChoice`
  --> src\sample_sources\config.rs:14:53
   |
14 |     FeatureFlags, HintSettings, InteractionOptions, PannsBackendChoice, UpdateChannel,
   |                                                     ^^^^^^^^^^^^^^^^^^ no `PannsBackendChoice` in `sample_sources::config::config_types`

warning: unused import: `resample::resample_linear_into`
  --> src\analysis\audio\mod.rs:26:16
   |
26 | pub(crate) use resample::resample_linear_into;
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `BPM_MIN_SELECTION_DIVISOR`
 --> src\egui_app\controller\library\mod.rs:3:54
  |
3 |     EguiController, StatusTone, MIN_SELECTION_WIDTH, BPM_MIN_SELECTION_DIVISOR,
  |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `mark_failed`
  --> src\egui_app\controller\library\analysis_jobs\db\mod.rs:35:54
   |
35 |     SampleAnalysisState, claim_next_jobs, mark_done, mark_failed, mark_failed_with_reason,
   |                                                      ^^^^^^^^^^^

warning: unused import: `update_sample_bpm`
  --> src\egui_app\controller\library\analysis_jobs\mod.rs:12:51
   |
12 |     build_sample_id, parse_sample_id, sample_bpm, update_sample_bpm, update_sample_bpms,
   |                                                   ^^^^^^^^^^^^^^^^^

warning: unused import: `crate::sample_sources::Rating`
  --> src\egui_app\controller\library\collections_controller\mod.rs:10:5
   |
10 | use crate::sample_sources::Rating;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `WavEntry`
 --> src\egui_app\controller\library\wavs\browser_search_worker.rs:3:37
  |
3 | use crate::sample_sources::{Rating, WavEntry};
  |                                     ^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src\egui_app\controller\library\wavs\browser_search_worker.rs:7:5
  |
7 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\egui_app\controller\library\wavs\browser_search_worker.rs:9:5
  |
9 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `MIN_SELECTION_WIDTH`
 --> src\egui_app\controller\playback\mod.rs:2:52
  |
2 | pub(crate) use super::{EguiController, StatusTone, MIN_SELECTION_WIDTH, BPM_MIN_SELECTION_DIVISOR};
  |                                                    ^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::egui_app::state::*`
 --> src\egui_app\controller\playback\mod.rs:3:16
  |
3 | pub(crate) use crate::egui_app::state::*;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::egui_app::state::*`
 --> src\egui_app\controller\ui\mod.rs:3:16
  |
3 | pub(crate) use crate::egui_app::state::*;
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `CollectionId`, `DecodedWaveform`, `FolderBrowserUiState`, `PlayheadState`, `ProgressOverlayState`, `Rating`, `SampleBrowserSort`, `SampleBrowserState`, `TriageFlagColumn`, `TriageFlagFilter`, `WaveformImage`, and `sample_sources::scanner::ScanMode`
  --> src\egui_app\controller.rs:19:9
   |
19 |         FolderBrowserUiState, PlayheadState, ProgressOverlayState, SampleBrowserSort,
   |         ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^
20 |         SampleBrowserState, TriageFlagColumn, TriageFlagFilter, UiState, WaveformImage,
   |         ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^           ^^^^^^^^^^^^^
...
23 |     sample_sources::scanner::ScanMode,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24 |     sample_sources::{
25 |         Collection, CollectionId, Rating, SampleSource, SourceDatabase, SourceDbError, SourceId,
   |                     ^^^^^^^^^^^^  ^^^^^^
...
29 |     waveform::{DecodedWaveform, WaveformRenderer},
   |                ^^^^^^^^^^^^^^^

warning: use of deprecated associated function `egui::ComboBox::from_id_source`: Renamed from_id_salt
   --> src\egui_app\ui\sample_browser_filter.rs:103:29
    |
103 |             egui::ComboBox::from_id_source("browser_sort")
    |                             ^^^^^^^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on by default

warning: use of deprecated method `egui::Ui::allocate_ui_at_rect`: Use `allocate_new_ui` instead
   --> src\egui_app\ui\sources_panel\mod.rs:170:16
    |
170 |             ui.allocate_ui_at_rect(folder_rect, |ui| {
    |                ^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `egui::Ui::allocate_ui_at_rect`: Use `allocate_new_ui` instead
   --> src\egui_app\ui\sources_panel\mod.rs:181:16
    |
181 |             ui.allocate_ui_at_rect(drop_targets_rect, |ui| {
    |                ^^^^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src\egui_app\ui\sources_panel\mod.rs:86:17
   |
86 |             let mut drop_targets_height = self
   |                 ----^^^^^^^^^^^^^^^^^^^
   |                 |
   |                 help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src\http_client.rs:69:9
   |
69 |     let mut reader = response.into_reader();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`

warning: variable does not need to be mutable
  --> src\http_client.rs:89:9
   |
89 |     let mut reader = response.into_reader();
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`

warning: unused variable: `dir`
   --> src\issue_gateway\token_store.rs:495:20
    |
495 | fn sync_parent_dir(dir: &Path) -> Result<(), IssueTokenStoreError> {
    |                    ^^^ help: if this is intentional, prefix it with an underscore: `_dir`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\wav_sanitize.rs:186:9
    |
186 |     let mut changed = false;
    |         ----^^^^^^^
    |         |
    |         help: remove this `mut`

warning: variable does not need to be mutable
   --> src\waveform\mod.rs:383:9
    |
383 |     let mut file = std::fs::File::open(path).map_err(|source| WaveformLoadError::Read {
    |         ----^^^^
    |         |
    |         help: remove this `mut`

Some errors have detailed explanations: E0432, E0583.
For more information about an error, try `rustc --explain E0432`.
warning: `sempal` (lib) generated 21 warnings
error: could not compile `sempal` (lib) due to 2 previous errors; 21 warnings emitted
